<resources>
    <string name="app_name">ПДУ</string>
    <string name="menu_item1">Настройка</string>
    <string name="menu_item2">Выход</string>
    <string name="menu_item3">Управление</string>
    <string name="menu_item4">Информация</string>
    <string name="button_connect">Подключение к БТС</string>
    <string name="text_view_select">Выбор БТС</string>
    <string name="text_view_work">Обмен данными с БТС включен</string>
    <string name="text_view_error">Ошибки в работе VCU</string>
    <string name="table_column_date">Дата и время</string>
    <string name="table_column_error_code">Код ошибки</string>
    <string name="table_column_device">Название узла</string>
    <string name="table_column_level_emergency">Степень критичности</string>
    <string name="table_column_description">Описание ошибки</string>
    <string name="tab_one_title">Дорожные события</string>
    <string name="tab_two_title">Мониторинг</string>
    <string name="tab_three_title">Освещение</string>
    <string name="tab_control_steer">Поворот передней оси</string>
    <string name="tab_control_steer_back">Поворот задней оси</string>
    <string name="tab_control_vehicle_turn">Скорость поворота</string>
    <string name="tab_info_one_title"> </string>
    <string name="tab_info_two_title"> </string>
    <string name="tab_info_three_title"> </string>
    <string name="tab_info_four_title">Температура</string>
    <string name="subtab_info_steer_title">Рулевые рейки</string>
    <string name="subtab_info_velocity_title">Текущая скорость</string>
    <string name="subtab_info_ac_dc_title">Батарея и питание</string>
    <string name="subtab_info_engine_title">Параметры двигателя</string>
    <string name="subtab_info_pressure_tempture_title">Температура, давление</string>
    <string name="subtab_info_navigation_title">Навигация</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="menu_item_monitoring">Мониторинг камер</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="acceleration">0%</string>
    <string name="breaking_up">0%</string>
    <string name="time_of_expirements">75.26</string>
    <string name="gearing_now">N</string>
    <string name="velocity">0.0</string>
    <string name="road_event_name">дорожный знак</string>
    <string name="time_road_event">352.1 с</string>
    <string name="coord_of_nord">-325.184 м</string>
    <string name="coord_of_east">197.683 м</string>
    <string name="current_velocity">15.05 км/ч</string>
    <string name="current_sign">1</string>
    <string name="tire1">42.2°</string>
    <string name="tire2">46.6°</string>
    <string name="tire3">48.9°</string>
    <string name="tire4">36.9°</string>
    <string name="break_up1">125.4°</string>
    <string name="break_up2">128.4°</string>
    <string name="break_up3">144.9°</string>
    <string name="break_up4">136.2°</string>
    <string name="joystick_item">Джойстик</string>
    <string name="title_joystick_activity">Индикатор джойстика</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="joystick_indicator">Джойстик не подключен</string>
    <string name="control_indicator">Соединение с сервером управления отсутствует</string>
    <string name="error_vcu_indicator">Ошибок в блоке VCU не обнаружено</string>
    <string name="manual_indicator">Ручное управление включено</string>
</resources>
